--- a/.tmux.conf
+++ b/.tmux.conf
@@ -108,10 +108,9 @@ setw -g mode-keys vi
 set-option -g default-command "reattach-to-user-namespace -l zsh"
 ## コピーモードの操作をvi風に設定する
  bind-key v copy-mode \; display "Copy mode!"
- bind-key -t vi-copy v begin-selection
- bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
- unbind -t vi-copy Enter
- bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+ bind-key -T vi-copy v send-keys -X begin-selection
+ bind-key -T vi-copy y send-keys copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+ bind-key -T vi-copy Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 ## Prefix+p でペースト
 ## クリップボードにも保存されているので Cmd-v でもペースト可能
 bind-key p paste-buffer
