--- a/.gitconfig
+++ b/.gitconfig
@@ -5,3 +5,5 @@
 	ff = only
 [core]
 	autocrlf = input
+[alias]
+	merged-delete = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|main|master|qa|production|release'|xargs git branch -d; };f"
