--- a/.gitconfig
+++ b/.gitconfig
@@ -7,3 +7,5 @@
 	autocrlf = input
 [alias]
 	merged-delete = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|main|master|qa|production|release'|xargs git branch -d; };f"
+[ghq]
+        root = ~/project
