--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
 	autocrlf = input
 	excludesfile = ~/.gitignore_global
 	hooksPath = ~/.config/git/hooks
+	ignorecase = false
 [ghq]
         root = ~/project
 [fetch]
